gitops/components/argo/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argo-server
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/backend-protocol: https
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: argo.<AWS_HOSTED_ZONE_NAME>
      http:
        paths:
          - backend:
              serviceName: argo-server
              servicePort: 2746
  tls:
  - hosts:
    - argo.<AWS_HOSTED_ZONE_NAME>
    secretName: argo-secret
